--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
     <style>
-        body {width: 200px;}
+        body {width: 250px;}
         button {width: 100%;}
         h1 {font-family: sans-serif;}
     </style>
@@ -14,8 +14,18 @@
     <button id="dark">Dark</button>
     <button id="amoled">AMOLED Dark</button>
     <button id="purple">Purple</button>
-    <button id="blue">Blue</button> 
+    <button id="darkpurple">Dark Purple</button>
+    <button id="blue">Blue</button>
+    <button id="darkblue">Dark Blue</button> 
     <button id="green">Green</button>
+    <button id="orange">Orange</button>
+    <hr>
+    <input type="checkbox" name="rounded" id="rounded">
+    <label for="rounded">Use Rounded UI</label>
+    <hr>
+    <p>Reload the page for changes to appear</p>
+    <hr>
+    <p>v1.4 | <a href="https://github.com/one23four56/canvas-themeinator" target="_blank">View on GitHub</a> | <a href="https://github.com/one23four56/canvas-themeinator/releases/" target="_blank">Update Log</a></p>
 <script src="script.js"></script>
 </body>
 </html>
