Add light theme

--- a/html/index.html
+++ b/html/index.html
@@ -16,12 +16,14 @@
         #darkblue {background-color: rgb(0, 19, 124);}
         #green {background-color: rgb(0, 197, 105);}
         #orange {background-color: rgb(236, 143, 22);}
+        #light {background-color: white;color: black;}
     </style>
 </head>
 <body>
     <h2>Click a button to set the Canvas Theme</h2>
     <button id="dark">Dark</button>
     <button id="amoled">AMOLED Dark</button>
+    <button id="light">Light</button>
     <button id="purple">Purple</button>
     <button id="darkpurple">Dark Purple</button>
     <button id="blue">Blue</button>
