--- a/html/index.html
+++ b/html/index.html
@@ -3,34 +3,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
-    <style>
-        body {width: 250px;}
-        button {width: 100%;color:white;border:none;padding: 3px;}
-        button:hover {box-shadow: inset 0px 0px 0px 1px white;}
-        h1 {font-family: sans-serif;}
-        #dark {background-color: rgb(46, 46, 46);}
-        #amoled {background-color: black;}
-        #purple {background-color: rgb(103, 7, 192);}
-        #darkpurple {background-color: rgb(59, 0, 114);}
-        #blue {background-color: rgb(62, 91, 255);}
-        #darkblue {background-color: rgb(0, 19, 124);}
-        #green {background-color: rgb(0, 197, 105);}
-        #orange {background-color: rgb(236, 143, 22);}
-        #light {background-color: white;color: black;}
-        #light:hover, #custom:hover {box-shadow: inset 0px 0px 0px 1px black;}
-        #custom {color:white;text-shadow: -1px 1px 2px #000,1px 1px 2px #000,1px -1px 0 #000,-1px -1px 0 #000;;background: linear-gradient(to top right, red 0%, orange 20%, yellow 40%, green 60%, blue 80%, purple 100%);}
-        #custom-form {display: none;}
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img src="../logo-white.png" alt="" width="300">
+    </header>
+    <div id="offset"></div>
     <h2>Click a button to set the Canvas Theme</h2>
     <button id="dark">Dark</button>
     <button id="amoled">AMOLED Dark</button>
-    <button id="light">Light</button>
     <button id="purple">Purple</button>
     <button id="darkpurple">Dark Purple</button>
     <button id="blue">Blue</button>
     <button id="darkblue">Dark Blue</button> 
+    <button id="light">Light</button>
+    <button id="aqua">Aqua</button>
     <button id="green">Green</button>
     <button id="orange">Orange</button>
     <hr>
@@ -56,7 +44,7 @@
     <hr>
     <p>Reload the page for changes to appear</p>
     <hr>
-    <p>v1.5 | <a href="https://github.com/one23four56/canvas-themeinator" target="_blank">View on GitHub</a> | <a href="https://github.com/one23four56/canvas-themeinator/releases/" target="_blank">Update Log</a></p>
+    <p>v1.5.1 | <a href="https://github.com/one23four56/canvas-themeinator" target="_blank">View on GitHub</a> | <a href="https://github.com/one23four56/canvas-themeinator/releases/" target="_blank">Update Log</a></p>
 <script src="script.js"></script>
 </body>
 </html>
